@@ -287,6 +287,21 @@ GanttViewBase::GanttViewBase( QWidget *parent )
 {
 }
 
+bool GanttViewBase::loadContext( const KoXmlElement &settings )
+{
+    KDGantt::DateTimeGrid *g = static_cast<KDGantt::DateTimeGrid*>( grid() );
+    g->setScale( static_cast<KDGantt::DateTimeGrid::Scale>( settings.attribute( "chart-scale", "0" ).toInt() ) );
+    g->setDayWidth( settings.attribute( "chart-daywidth", "30" ).toDouble() );
+    return true;
+}
+
+void GanttViewBase::saveContext( QDomElement &settings ) const
+{
+    KDGantt::DateTimeGrid *g = static_cast<KDGantt::DateTimeGrid*>( grid() );
+    settings.setAttribute( "chart-scale", g->scale() );
+    settings.setAttribute( "chart-daywidth", g->dayWidth() );
+}
+
 //-------------------------------------------
 NodeGanttViewBase::NodeGanttViewBase( QWidget *parent )
     : GanttViewBase( parent ),
@@ -357,9 +372,7 @@ bool NodeGanttViewBase::loadContext( const KoXmlElement &settings )
         m_ganttdelegate->showTimeConstraint = (bool)( e.attribute( "show-timeconstraint", "0" ).toInt() );
         m_ganttdelegate->showNegativeFloat = (bool)( e.attribute( "show-negativefloat", "0" ).toInt() );
 
-        KDGantt::DateTimeGrid *g = static_cast<KDGantt::DateTimeGrid*>( grid() );
-        g->setScale( static_cast<KDGantt::DateTimeGrid::Scale>( e.attribute( "chart-scale", "0" ).toInt() ) );
-        g->setDayWidth( e.attribute( "chart-daywidth", "30" ).toDouble() );
+        GanttViewBase::loadContext( e );
 
         m_printOptions.loadContext( e );
     }
@@ -384,9 +397,7 @@ void NodeGanttViewBase::saveContext( QDomElement &settings ) const
     e.setAttribute( "show-timeconstraint", m_ganttdelegate->showTimeConstraint );
     e.setAttribute( "show-negativefloat", m_ganttdelegate->showNegativeFloat );
 
-    KDGantt::DateTimeGrid *g = static_cast<KDGantt::DateTimeGrid*>( grid() );
-    e.setAttribute( "chart-scale", g->scale() );
-    e.setAttribute( "chart-daywidth", g->dayWidth() );
+    GanttViewBase::saveContext( e );
 
     m_printOptions.saveContext( e );
 }
@@ -1096,12 +1107,14 @@ void ResourceAppointmentsGanttView::slotOptions()
 bool ResourceAppointmentsGanttView::loadContext( const KoXmlElement &settings )
 {
     kDebug();
+    m_gantt->loadContext( settings );
     return treeView()->loadContext( m_model->columnMap(), settings );
 }
 
 void ResourceAppointmentsGanttView::saveContext( QDomElement &settings ) const
 {
     kDebug();
+    m_gantt->saveContext( settings );
     treeView()->saveContext( m_model->columnMap(), settings );
 }
 
